# goodmock

./: .gitignore  methodmock.py  methodmockcontext.py  methodmockdata.py  mock.py  mockstate.py  mocktype.py  pyproject.toml  returns.py  setup.py  takes.py  test_mock.py  test_mockv1.py  when.py  whencontext.py
.github/workflows/: publish-to-test-pypi.yaml
context/: argumentcontext.py  methodmockcontext.py  mockcontext.py
event/: setupstateevent.py  stateevent.py  verifystateevent.py
state/: basemockstate.py  callmockstate.py  mockstate.py  setupmockstate.py  verifymockstate.py
