[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "goodmock"
description = "A good mock library for python"
readme = "README.md"
license = { file="LICENSE" }
version = "0.0.1"
authors = [
    { name="Schuyler Goodman", email="schuyler.goodman@gmail.com" }
]
url = "https://github.com/SchuylerGoodman/goodmock"
keywords = "mock, unit test"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.10"
